--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
   <!-- CSS Stylesheet -->
   <link rel="stylesheet" href="global.css">
+  <link rel="stylesheet" href="tablet.css">
+  <link rel="stylesheet" href="mobile.css">
   <link rel="stylesheet" href="shapedivider.css">
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
