--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
       <img src="assets/images/logo-light.svg" class="logo" alt="Workit logo">
       <a class="apply">Apply for access</a>
     </nav>
-    <h1>Data <span class="eucaplyptus-underline">tailored</span> to your needs.</h1>
+    <img class="coil-one" src="/assets/images/bg-pattern-1.svg" alt="coil pattern">
+    <img class="coil-two" src="/assets/images/bg-pattern-2.svg" alt="coil pattern">
+    <h1>Data <span class="eucaplyptus-underline">tailored</span> to your
+      needs.</h1>
     <a class="learn-more">Learn more</a>
     <div class="custom-shape-divider-bottom-1721480282">
       <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
