Fixing mid-section

--- a/index.html
+++ b/index.html
@@ -51,21 +51,29 @@
       <ul>
         <li class="list-groups">
         <li class="li-numbers">1</li>
-        <h2>Actionable insights</h2>
-        <p>Optimize your products, improve customer satisfaction and stay ahead of the competition with our product data
-          analytics.</p>
+        <div class="list-content">
+          <h2>Actionable insights</h2>
+          <p>Optimize your products, improve customer satisfaction and stay ahead of the competition with our product
+            data
+            analytics.</p>
+        </div>
         </li>
         <li class="list-groups">
         <li class="li-numbers">2</li>
-        <h2>Data-driven decisions</h2>
-        <p>Make data-driven decisions with our product data analytics. Our AI-generated reports help you unlock insights
-          hidden in your product data.</p>
+        <div class="list-content">
+          <h2>Data-driven decisions</h2>
+          <p>Make data-driven decisions with our product data analytics. Our AI-generated reports help you unlock
+            insights
+            hidden in your product data.</p>
+        </div>
         </li>
         <li class="list-groups">
+          <div class="list-content">
         <li class="li-numbers">3</li>
         <h2>Always affordable</h2>
         <p>Always affordable pricing that scales with your business. Get top-quality product data analytics services
           without hidden costs or unexpected fees.</p>
+        </div>
         </li>
       </ul>
       <div class="custom-shape-divider-bottom-1721592573">
