Progressed with tablet view

--- a/index.html
+++ b/index.html
@@ -50,30 +50,28 @@
     <section class="list-section">
       <ul>
         <li class="list-groups">
-        <li class="li-numbers">1</li>
-        <div class="list-content">
-          <h2>Actionable insights</h2>
-          <p>Optimize your products, improve customer satisfaction and stay ahead of the competition with our product
-            data
-            analytics.</p>
-        </div>
-        </li>
-        <li class="list-groups">
-        <li class="li-numbers">2</li>
-        <div class="list-content">
-          <h2>Data-driven decisions</h2>
-          <p>Make data-driven decisions with our product data analytics. Our AI-generated reports help you unlock
-            insights
-            hidden in your product data.</p>
-        </div>
-        </li>
-        <li class="list-groups">
+          <span class="li-numbers">1</span>
           <div class="list-content">
-        <li class="li-numbers">3</li>
-        <h2>Always affordable</h2>
-        <p>Always affordable pricing that scales with your business. Get top-quality product data analytics services
-          without hidden costs or unexpected fees.</p>
-        </div>
+            <h2>Actionable insights</h2>
+            <p>Optimize your products, improve customer satisfaction, and stay ahead of the competition with our product
+              data analytics.</p>
+          </div>
+        </li>
+        <li class="list-groups">
+          <span class="li-numbers">2</span>
+          <div class="list-content">
+            <h2>Data-driven decisions</h2>
+            <p>Make data-driven decisions with our product data analytics. Our AI-generated reports help you unlock
+              insights hidden in your product data.</p>
+          </div>
+        </li>
+        <li class="list-groups">
+          <span class="li-numbers">3</span>
+          <div class="list-content">
+            <h2>Always affordable</h2>
+            <p>Always affordable pricing that scales with your business. Get top-quality product data analytics services
+              without hidden costs or unexpected fees.</p>
+          </div>
         </li>
       </ul>
       <div class="custom-shape-divider-bottom-1721592573">
@@ -91,6 +89,7 @@
           <p>Hi, I'm Louis Graham, the founder of the company. Book a demo call with me to become a beta tester for our
             app and kickstart your company. Apply for access below and I’ll be in touch to schedule a call.</p>
           <a class="apply-btn">Apply for access</a>
+          <img class="coil-three" src="/assets/images/bg-pattern-3.svg" alt="coil pattern">
         </section>
       </article>
     </section>
