--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <!-- CSS Stylesheet -->
   <link rel="stylesheet" href="global.css">
+  <link rel="stylesheet" href="desktop.css">
   <link rel="stylesheet" href="tablet.css">
   <link rel="stylesheet" href="mobile.css">
   <link rel="stylesheet" href="shapedivider.css">
